--- a/CustomStoryboardSegue/Base.lproj/Main.storyboard
+++ b/CustomStoryboardSegue/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="tUW-Y0-ona" secondAttribute="trailing" constant="63" id="5In-6F-eJb"/>
                             <constraint firstItem="tUW-Y0-ona" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="39" id="8Nx-7e-Ccn"/>
@@ -51,14 +51,15 @@
                         <viewControllerLayoutGuide type="bottom" id="kUe-El-6Y9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Nuf-4R-bZ8">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KgP-Ov-49D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="905" y="557"/>
+            <point key="canvasLocation" x="1005" y="296"/>
         </scene>
     </scenes>
 </document>
